2010-02-02  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclVar.c (Tcl_ArrayObjCmd): [Bug 2939073]: Stop the [array
	unset] command from having dangling pointer problems when an unset
	trace deletes the element that is going to be processed next. Many
	thanks to Alexandre Ferrieux for the bulk of this fix.

2010-02-01  Donal K. Fellows  <dkf@users.sf.net>

	* generic/regexec.c (ccondissect, crevdissect): [Bug 2942697]: Rework
	these functions so that certain pathological patterns are matched much
	more rapidly. Many thanks to Tom Lane for dianosing this issue and
	providing an initial patch.

2010-02-01  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclInt.decls:		Various CYGWIN-related fixes
	* generic/tclInt.h:		backported from HEAD. Still
	* generic/tclIntPlatDecls.h:	configure script not modified,
	* generic/tclPort.h:		so CYGWIN build is still
	* generic/tclTest.c:		disabled. Reason: although the
	* win/cat.c:			build succeeds with those changes,
	* win/tclWinDde.c:		many tests still fail.
	* win/tclWinError.c:
	* win/tclWinFile.c:
	* win/tclWinPipe.c:
	* win/tclWinPort.h:
	* win/tclWinReg.c:
	* win/tclWinSerial.c:
	* win/tclWinSock.c:
	* win/tclWinTest.c:
	* win/tclWinThrd.c:

2010-01-29  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tcl.h:	Use correct TCL_LL_MODIFIER for CYGWIN.
				Formatting (all backported from HEAD)
	* generic/rege_dfa.c:	Fix macro conflict on CYGWIN: don't use
				"small".
	* generic/tclTest.c:	Fix gcc 4.4 warning: ignoring return value of
	* unix/tclUnixPipe.c:	‘write’
	* unix/tclUnixNotify.c:

2010-01-19  Donal K. Fellows  <dkf@users.sf.net>

	* doc/dict.n: [Bug 2929546]: Clarify just what [dict with] and [dict
	update] are doing with variables.

2010-01-18  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIO.c (CreateScriptRecord): [Bug 2918110]: Initialize
	the EventScriptRecord (esPtr) fully before handing it to
	Tcl_CreateChannelHandler for registration. Otherwise a reflected